--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WebSoft - разработка сайтов!</title>
+    <title>WebSoft - разработка и доработка сайтов!</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -19,7 +19,7 @@
     <meta name="msapplication-navbutton-color" content="#000">
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#000">
-    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" integrity="sha256-piqEf7Ap7CMps8krDQsSOTZgF+MU/0MPyPW2enj5I40=" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
@@ -109,7 +109,7 @@
                     <div class="main-block-overlay wow widthGo"></div>
                     <div class="main-block-flex">
                         <div class="main-block-left">
-                            <a href="#" class="btn-accent btn open_modal">
+                            <a href="#callback__modal" class="btn-accent btn open_modal">
                                 <span class="hover-btn">Написать нам</span>
                             </a>
                         </div>
@@ -137,7 +137,7 @@
                 <div class="main-right-slider slider2 main-slider">
                     <div class="main-right-item">
                         <div class="main-slide">
-                            <img src="img/slide2.png" alt="" class="image-slide">
+                            <img src="img/slide3.png" alt="" class="image-slide">
                         </div>
                     </div>
                     <div class="main-right-item">
@@ -233,12 +233,8 @@
                     <div class="img"><img src="img/photo1.jpg" alt=""></div>
                 </div>
                 <div class="text">
-                    <div class="name">Захарова Виктория</div>
-                    <div class="position">HTML/CSS/JS вёрстка, редизайн, адаптив.</div>
-                    <div class="credo">
-                        <h6>Кредо:</h6>
-                        <p>"Дорогу осилит идущий"</p>
-                    </div>
+                    <div class="name">Артём</div>
+                    <div class="position">Менеджер по проектам. Связь с заказчиками.</div>
 
                     <blockquote>
                         <p>Адаптивная кроссбраузерная верстка. Знаю и умею использовать: HTML5/CSS3, JS, Jquery,
@@ -251,17 +247,14 @@
                     </blockquote>
                 </div>
             </div>
+
             <div class="about-box">
                 <div class="photo">
                     <div class="img"><img src="img/photo1.jpg" alt=""></div>
                 </div>
                 <div class="text">
-                    <div class="name">Захарова Виктория</div>
+                    <div class="name">Виктория</div>
                     <div class="position">HTML/CSS/JS вёрстка, редизайн, адаптив.</div>
-                    <div class="credo">
-                        <h6>Кредо:</h6>
-                        <p>"Дорогу осилит идущий"</p>
-                    </div>
 
                     <blockquote>
                         <p>Адаптивная кроссбраузерная верстка. Знаю и умею использовать: HTML5/CSS3, JS, Jquery,
@@ -274,17 +267,14 @@
                     </blockquote>
                 </div>
             </div>
+
             <div class="about-box">
                 <div class="photo">
                     <div class="img"><img src="img/photo1.jpg" alt=""></div>
                 </div>
                 <div class="text">
-                    <div class="name">Захарова Виктория</div>
-                    <div class="position">HTML/CSS/JS вёрстка, редизайн, адаптив.</div>
-                    <div class="credo">
-                        <h6>Кредо:</h6>
-                        <p>"Дорогу осилит идущий"</p>
-                    </div>
+                    <div class="name">Павел</div>
+                    <div class="position">Любая CMS для вашего сайта.</div>
 
                     <blockquote>
                         <p>Адаптивная кроссбраузерная верстка. Знаю и умею использовать: HTML5/CSS3, JS, Jquery,
@@ -610,8 +600,8 @@
 
             <div class="portfolio-left">
                 <div class="portfolio-slider portfolio__slider1 portfolio-left-slider">
-                    <a href="#" class="slide"><img src="img/slide2.png" alt=""></a>
-                    <a href="#" class="slide"><img src="img/slide2.png" alt=""></a>
+                    <a href="#" class="slide"><img src="img/slide3.png" alt=""></a>
+                    <a href="#" class="slide"><img src="img/slide4.png" alt=""></a>
                 </div>
 
                 <div class="portfolio-block">
@@ -630,28 +620,28 @@
 
                             <div class="text">
                                 <p>Адаптивная верстка интернет магазина по готовым макетам.</p>
-                                <p>Верстка выполнена с помощью фреймворка bootstrap 4. </p>
+                                <p>Верстка выполнена на основе фреймворка bootstrap 4.</p>
                                 <p>Также на сайте использованы следующие jquery эффекты: карусель, вкладки,
                                    аккоредон.</p>
                             </div>
 
-                            <a href="https://verstka.tk/luzana" class="btn-accent btn open_modal">
+                            <a href="https://viktoriazaharova.github.io/luzana/app/" class="btn-accent btn open_modal">
                                 <span class="hover-btn">Посмотреть</span>
                             </a>
                         </div>
                     </div>
                     <div class="slide">
                         <div class="portfolio-box-description">
-                            <a href="https://verstka.tk/luzana" class="slider-title">Интернет магазин одежды Luzana</a>
+                            <a href="https://verstka.tk/luzana" class="slider-title">Landing Page Happy Kids Show</a>
 
                             <div class="text">
-                                <p>Адаптивная верстка интернет магазина по готовым макетам.</p>
-                                <p>Верстка выполнена с помощью фреймворка bootstrap 4. </p>
+                                <p>Адаптивная верстка Landing Page по готовому макету.</p>
+                                <p>Верстка выполнена с помощью css flexbox.</p>
                                 <p>Также на сайте использованы следующие jquery эффекты: карусель, вкладки,
                                    аккоредон.</p>
                             </div>
 
-                            <a href="https://verstka.tk/luzana" class="btn-accent btn open_modal">
+                            <a href="http://happykids.show/" class="btn-accent btn open_modal">
                                 <span class="hover-btn">Посмотреть</span>
                             </a>
                         </div>
@@ -663,7 +653,7 @@
                     <div class="slide">
                         <div class="price-wrapper">
                             <h5>Цена:</h5>
-                            <p>100 $</p>
+                            <p>400 $</p>
                         </div>
 
                         <div class="workload">
@@ -679,17 +669,17 @@
                     <div class="slide">
                         <div class="price-wrapper">
                             <h5>Цена:</h5>
-                            <p>100 $</p>
+                            <p>50 $</p>
                         </div>
 
                         <div class="workload">
                             <h5>Объем работы:</h5>
-                            <p>12 стр.</p>
+                            <p>1 стр.</p>
                         </div>
 
                         <div class="time-wrapper">
                             <h5>Сроки:</h5>
-                            <p>10 дней</p>
+                            <p>2 дня</p>
                         </div>
                     </div>
                 </div>
@@ -712,6 +702,31 @@
         <div class="box-title title-white">
             <p>Наш прайс-лист</p>
             <h2>Сколько это стоит</h2>
+        </div>
+
+        <div class="price-slider__arrow">
+            <div class="main-arrow-prev slick-arrow">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+                     y="0px"
+                     viewBox="0 0 477.175 477.175" style="enable-background:new 0 0 477.175 477.175;" xml:space="preserve">
+<g>
+	<path d="M145.188,238.575l215.5-215.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0l-225.1,225.1c-5.3,5.3-5.3,13.8,0,19.1l225.1,225
+		c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L145.188,238.575z"/>
+</g>
+
+</svg>
+            </div>
+            <div class="main-arrow-next slick-arrow">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     viewBox="0 0 477.175 477.175" style="enable-background:new 0 0 477.175 477.175;" xml:space="preserve">
+<g>
+	<path d="M360.731,229.075l-225.1-225.1c-5.3-5.3-13.8-5.3-19.1,0s-5.3,13.8,0,19.1l215.5,215.5l-215.5,215.5
+		c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4c3.4,0,6.9-1.3,9.5-4l225.1-225.1C365.931,242.875,365.931,234.275,360.731,229.075z
+		"/>
+</g>
+
+</svg>
+            </div>
         </div>
 
         <div class="price-slider">
@@ -750,7 +765,7 @@
             <div class="slide">
                 <div class="price-box__wrapper">
                     <div class="price-box">
-                        <h3>Landing Page</h3>
+                        <h3>Landing Page2</h3>
 
                         <p>Что входит в стоимость?</p>
                         <ul class="list-price">
@@ -929,14 +944,14 @@
             </div>
             <div class="form__content">
                 <div class="styled-input">
-                    <input type="text" class="styled-input__input" name="nickname">
+                    <input type="text" class="styled-input__input" name="name">
                     <div class="styled-input__placeholder">
                         <span class="styled-input__placeholder-text">Имя</span>
                     </div>
                     <div class="styled-input__circle"></div>
                 </div>
                 <div class="styled-input">
-                    <input type="text" class="styled-input__input">
+                    <input type="text" class="styled-input__input" name="mail">
                     <div class="styled-input__placeholder">
                         <span class="styled-input__placeholder-text">Email</span>
                     </div>
@@ -944,11 +959,44 @@
                 </div>
 
                 <div class="styled-input">
-                    <input type="text" class="styled-input__input">
+                    <input type="text" class="styled-input__input" name="description">
                     <div class="styled-input__placeholder">
                         <span class="styled-input__placeholder-text">Описание</span>
                     </div>
                     <div class="styled-input__circle"></div>
+                </div>
+
+                <div class="upload-container">
+                    <label>
+                    	<span class="image"><!--?xml version="1.0" encoding="iso-8859-1"?-->
+                                                    <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
+<g>
+	<path d="M50.975,20.694c-0.527-9-7.946-16.194-16.891-16.194c-5.43,0-10.688,2.663-13.946,7.008
+		c-0.074-0.039-0.153-0.065-0.228-0.102c-0.198-0.096-0.399-0.188-0.605-0.269c-0.115-0.045-0.23-0.086-0.346-0.127
+		c-0.202-0.071-0.406-0.133-0.615-0.19c-0.116-0.031-0.231-0.063-0.349-0.09c-0.224-0.051-0.452-0.09-0.683-0.124
+		c-0.102-0.015-0.202-0.035-0.305-0.047C16.677,10.523,16.341,10.5,16,10.5c-4.962,0-9,4.037-9,9c0,0.129,0.007,0.255,0.016,0.381
+		C2.857,22.148,0,26.899,0,31.654C0,38.737,5.762,44.5,12.845,44.5H18c0.552,0,1-0.447,1-1s-0.448-1-1-1h-5.155
+		C6.865,42.5,2,37.635,2,31.654c0-4.154,2.705-8.466,6.432-10.253L9,21.13V20.5c0-0.123,0.008-0.249,0.015-0.375l0.009-0.175
+		l-0.012-0.188C9.007,19.675,9,19.588,9,19.5c0-3.859,3.14-7,7-7c0.309,0,0.614,0.027,0.917,0.067
+		c0.078,0.01,0.155,0.023,0.232,0.036c0.268,0.044,0.532,0.102,0.792,0.177c0.034,0.01,0.069,0.016,0.102,0.026
+		c0.286,0.087,0.565,0.198,0.838,0.322c0.069,0.031,0.137,0.065,0.205,0.099c0.242,0.119,0.479,0.251,0.707,0.399
+		C21.72,14.875,23,17.039,23,19.5c0,0.553,0.448,1,1,1s1-0.447,1-1c0-2.754-1.246-5.219-3.2-6.871
+		C24.666,8.879,29.388,6.5,34.084,6.5c7.744,0,14.178,6.135,14.848,13.887c-1.022-0.072-2.553-0.109-4.083,0.125
+		c-0.546,0.083-0.921,0.593-0.838,1.139c0.075,0.495,0.501,0.85,0.987,0.85c0.05,0,0.101-0.004,0.152-0.012
+		c2.224-0.336,4.543-0.021,4.684-0.002C54.49,23.372,58,27.661,58,32.472C58,38.001,53.501,42.5,47.972,42.5H44
+		c-0.552,0-1,0.447-1,1s0.448,1,1,1h3.972C54.604,44.5,60,39.104,60,32.472C60,26.983,56.173,22.06,50.975,20.694z"></path>
+	<path d="M31.708,30.794c-0.092-0.093-0.203-0.166-0.326-0.217c-0.244-0.101-0.52-0.101-0.764,0
+		c-0.123,0.051-0.233,0.124-0.326,0.217l-7.999,7.999c-0.391,0.391-0.391,1.023,0,1.414C22.488,40.402,22.744,40.5,23,40.5
+		s0.512-0.098,0.707-0.293L30,33.914V54.5c0,0.553,0.448,1,1,1s1-0.447,1-1V33.914l6.293,6.293C38.488,40.402,38.744,40.5,39,40.5
+		s0.512-0.098,0.707-0.293c0.391-0.391,0.391-1.023,0-1.414L31.708,30.794z"></path>
+</g>
+
+</svg>
+</span>
+                        <span>Добавить ТЗ</span>
+                        <input type="file" name="file" multiple="" data-original-title="" title="">
+                    </label>
                 </div>
 
 
@@ -975,7 +1023,6 @@
 
 <footer id="footer">
     <div class="container">
-
 
         <ul class="box-contacts">
             <li><a href="skype:websoft"><i class="fab fa-skype"></i>
@@ -1014,6 +1061,53 @@
         <div class="copyright">© WebSoft, 2019. Все права защищены</div>
     </div>
 </footer>
+
+
+<div class="modal__div" id="callback__modal">
+    <div class="modal__wrapper">
+        <span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
+        <h2>Связаться с нами</h2>
+
+        <form method="post" class="form">
+
+            <label class="styled-input">
+                <span>Имя</span>
+                <input type="text" class="styled-input__input" name="name">
+
+            </label>
+            <label class="styled-input">
+                <span>Email</span>
+                <input type="text" class="styled-input__input" name="mail" required>
+            </label>
+
+            <label class="styled-input label-message">
+                <span>Ваше сообщение</span>
+
+                <textarea name="message" class="styled-input__input"></textarea>
+
+            </label>
+
+
+            <button type="submit" class="styled-button">
+                    <span class="styled-button__real-text-holder">
+                        <span class="styled-button__real-text">Отправить</span>
+                        <span class="styled-button__moving-block face">
+                            <span class="styled-button__text-holder">
+                                <span class="styled-button__text">Отправить</span>
+                            </span>
+                        </span><span class="styled-button__moving-block back">
+                            <span class="styled-button__text-holder">
+                                <span class="styled-button__text">Отправить</span>
+                            </span>
+                        </span>
+                    </span>
+            </button>
+        </form>
+    </div>
+</div>
+
+<div class="overlay"></div><!-- Пoдлoжкa -->
+
 
 <script src="js/jquery.min.js"></script>
 <script src="js/libs.min.js"></script>
