--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,9 @@
 <body>
 
 <div class="preloader">
-    <div class="line-preloader gsapWidth" data-duration="3" data-delay="2"></div>
+    <div class="preloader-bg"></div>
+
+    <div class="line-preloader line-preloader__top gsapWidth" data-duration="3" data-delay="2"></div>
 
     <div class="preloader-logo">
 
@@ -56,7 +58,7 @@
 
     </div>
 
-    <div class="line-preloader gsapWidth" data-duration="3" data-delay="2"></div>
+    <div class="line-preloader line-preloader__bottom gsapWidth" data-duration="3" data-delay="2"></div>
 </div>
 
 
