--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,7 @@
     <meta name="msapplication-navbutton-color" content="#000">
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#000">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"
-          integrity="sha256-piqEf7Ap7CMps8krDQsSOTZgF+MU/0MPyPW2enj5I40=" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
@@ -370,7 +369,7 @@
 </svg>
 
                     </div>
-                    <h3 class="gsapFadeTop">ВИДЫ РАБОТ</h3>
+                    <h3 class="gsapFade">ВИДЫ РАБОТ</h3>
                 </li>
                 <li>
                     <div class="icon gsapFade" data-delay=".3">
@@ -427,7 +426,7 @@
 
 </svg>
                     </div>
-                    <h3 class="gsapFadeTop" data-delay=".2">ОС И БРАУЗЕРЫ</h3>
+                    <h3 class="gsapFade" data-delay="0">ОС И БРАУЗЕРЫ</h3>
                 </li>
                 <li>
                     <div class="icon gsapFade" data-delay=".4">
@@ -485,7 +484,7 @@
 </g>
 </svg>
                     </div>
-                    <h3 class="gsapFadeTop" data-delay=".2">ТЕХНОЛОГИИ</h3>
+                    <h3 class="gsapFade" data-delay="0">ТЕХНОЛОГИИ</h3>
                 </li>
                 <li>
                     <div class="icon gsapFade" data-delay=".5">
@@ -531,7 +530,7 @@
 
 </svg>
                     </div>
-                    <h3 class="gsapFadeTop" data-delay=".2">КАЧЕСТВО</h3>
+                    <h3 class="gsapFade" data-delay="0">КАЧЕСТВО</h3>
                 </li>
             </ul>
             <div class="tabs__content active">
