--- a/app/index.html
+++ b/app/index.html
@@ -700,8 +700,8 @@
 
                 </div>
 
-                <div class="portfolio-slider portfolio__slider3 portfolio-right-slider-bottom gsapFade" data-delay="1.4"
-                     data-duration="5">
+                <div class="portfolio-slider portfolio__slider3 portfolio-right-slider-bottom gsapFade" data-delay=".7"
+                     data-duration="2">
                     <div class="slide">
                         <div class="price-wrapper">
                             <h5>Цена:</h5>
